# resume_ai

./: Dockerfile  LICENSE.md  Procfile  README.md  app.py  fly.toml  pyproject.toml  render.yaml  requirements.txt
prompts/: system_prompt.md
src/ia/: base.py  gemini.py
