[tool.poetry]
name = "resume_ai"
version = "0.1.0"
description = "API FastAPI para geração de currículos"
authors = ["bignardi"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "*"
uvicorn = "*"
python-dotenv = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"